1999-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (AddWindow):
	removed XSynchronize call :-)

1999-11-28  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: Minor adjustment to StrokeFunc description.

1999-11-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	fixed screwed up previous commit

	* fvwm/geometry.c (gravity_get_naked_geometry):
	removed undeclared variable

	* fvwm/builtins.c (SetHiColorset):
	removed debug code

	* fvwm/events.c (HandlePropertyNotify):
	(HandleConfigureRequest):
	* fvwm/add_window.c (AddWindow):
	use new function gravity_constrain_size

	* fvwm/borders.c (update_absolute_geometry):
	* fvwm/move_resize.c (ConstrainSize):
	(maximize_adjust_offset):
	* fvwm/placement.c:
	(get_shaded_geometry):
	(gravity_translate_to_northwest_geometry_no_bw):
	(gravity_translate_to_northwest_geometry):
	(get_relative_geometry):
	(gravity_add_decoration):
	(gravity_get_naked_geometry):
	(gravity_resize):
	(gravity_move):
	(gravity_get_offsets):
	functions moved to geometry.c

	* fvwm/Makefile.am (fvwm2_SOURCES):
	* fvwm/geometry.h:
	* fvwm/geometry.c:
	new files

	* fvwm/add_window.c (AddWindow):
	* fvwm/placement.c (PlaceWindow):
	overhauled placement code

1999-11-28  olicha   <olivier.chapuis@free.fr>

	* fvwm/builtins.c (strokeFunc):
	* fvwm/fvwm2.1:
	New options DrawMotion and FeedBack to the StrokeFunc

1999-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawBorder):
	don't draw a relief around the border if it would cover the whole border

	* fvwm/move_resize.c:
	* fvwm/fvwm.c (InitVariables):
	* fvwm/screen.h (ScreenInfo):
	renamed Scr.DrawGC to Scr.XorGC

	* configure.in: changed version to 2.3.11

	* fvwm/events.c (HandleButtonPress):
	fixed bug #78

	* fvwm/move_resize.c (hide_options):
	'none' option to HideGeometryWindow renamed to 'never'

	* fvwm/borders.c (RedrawBorder):
	implemented 'flat' and 'sunk' BorderStyle

	* fvwm/borders.c (SetupFrame):